# MMORPG2

./: .clang-format  .clang-tidy  .cmake-format  .gitattributes  .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README  README.md
.github/workflows/: ci.yml
assets/Client/tiles/: grass_centre.json  grass_stone_east.json  grass_stone_north.json  grass_stone_south.json  grass_stone_west.json  grass_water_east.json  grass_water_north.json  grass_water_south.json  grass_water_west.json  stone_centre.json  water_centre.json
cmake/: GetHash.cmake
include/Common/: Common.hpp  Export.hpp  Game.hpp  Input.hpp  Network.hpp  Util.hpp  Version.hpp  World.hpp
include/Common/Game/: WorldEntity.hpp  WorldEntityCollider.hpp  WorldEntityGCD.hpp  WorldEntityName.hpp  WorldEntityPosition.hpp  WorldEntityStats.hpp  WorldEntityType.hpp  WorldPosition.hpp
include/Common/Input/: Action.hpp  ActionType.hpp  InputState.hpp
include/Common/Network/: ClientID.hpp  Crypto.hpp  Message.hpp  MessageData.hpp  MessageHeader.hpp  MessageQueue.hpp  MessageType.hpp  NetworkEntity.hpp  Protocol.hpp  SerialisedComponent.hpp  ServerProperties.hpp
include/Common/Util/: ThreadSafeQueue.hpp
include/Common/World/: Level.hpp  Tile.hpp
include/common/: common.hpp  message.hpp  server_properties.hpp
src/: CMakeLists.txt
src/Client/: CMakeLists.txt  Main.cpp  NetworkManager.cpp  NetworkManager.hpp  PCH.hpp  Version.cpp.in  Version.hpp
src/Client/Assets/: AssetManager.cpp  AssetManager.hpp
src/Client/Discord/: DiscordManager.cpp  DiscordManager.hpp  Secrets.cpp.in  Secrets.hpp
src/Client/Engine/: Engine.cpp  Engine.hpp  State.hpp
src/Client/Game/: Game.cpp  Game.hpp
src/Client/Graphics/: TextureAtlas.cpp  TextureAtlas.hpp
src/Client/Input/: InputManager.cpp  InputManager.hpp  InputState.hpp
src/Client/Network/: NetworkManager.cpp  NetworkManager.hpp
src/Client/States/: Game.cpp  Game.hpp  Login.cpp  Login.hpp
src/Client/UI/: Element.cpp  Element.hpp  Image.cpp  Image.hpp  Layer.hpp  UI.cpp  UI.hpp  UIManager.cpp  UIManager.hpp  UIRenderer.cpp  UIRenderer.hpp
src/Client/World/: Level.cpp  Level.hpp  TerrainRenderer.cpp  TerrainRenderer.hpp  TerrainTile.cpp  TerrainTile.hpp
src/Common/: CMakeLists.txt  Common.cpp  PCH.hpp  Version.cpp.in
src/Common/Game/: WorldEntity.cpp  WorldEntityGCD.cpp  WorldEntityName.cpp  WorldEntityPosition.cpp  WorldEntityStats.cpp  WorldEntityType.cpp  WorldPosition.cpp
src/Common/Input/: Action.cpp  InputState.cpp
src/Common/Network/: ClientID.cpp  Crypto.cpp  Message.cpp  MessageData.cpp  MessageType.cpp
src/Common/World/: Level.cpp  Tile.cpp
src/Server/: CMakeLists.txt  Client.hpp  EntityManager.cpp  EntityManager.hpp  Main.cpp  Message.cpp  NetworkManager.cpp  NetworkManager.hpp  PCH.hpp  Version.cpp.in  Version.hpp
src/Server/Database/: DatabaseManager.cpp  DatabaseManager.hpp  Secrets.cpp.in  Secrets.hpp
src/Server/ECS/: EntityManager.cpp  EntityManager.hpp
src/Server/Game/: Player.cpp  Player.hpp  PlayerManager.cpp  PlayerManager.hpp
src/Server/Input/: InputState.hpp
src/Server/Login/: LoginManager.cpp  LoginManager.hpp
src/Server/Network/: Client.hpp  Message.hpp  NetworkManager.cpp  NetworkManager.hpp  SerialisedComponent.hpp
src/Server/Server/: Manager.hpp  Server.cpp  Server.hpp
src/Server/Shell/: CommandShell.cpp  CommandShell.hpp
src/client/: CMakeLists.txt  Main.cpp  main.cpp
src/common/: CMakeLists.txt  common.cpp
src/common/Network/: ClientID.cpp  MessageType.cpp
src/server/: CMakeLists.txt  EntityManager.hpp  Main.cpp  Message.cpp  Message.hpp  MessageQueue.cpp  MessageQueue.hpp  NetworkManager.cpp  NetworkManager.hpp  Version.hpp  main.cpp
tools/: CMakeLists.txt
tools/LevelEditor/: CMakeLists.txt  Main.cpp  TerrainRenderer.cpp  TerrainRenderer.hpp  TerrainTile.cpp  TerrainTile.hpp  TextureManager.hpp
tools/ShellClient/: CMakeLists.txt  Main.cpp
tools/TileGen/: CMakeLists.txt  Main.cpp
